apps/raconteurs/grav/preview/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: raconteurs-preview
spec:
  virtualhost:
    fqdn: raconteurs-preview.prodv2.cedille.club
    tls:
      secretName: raconteurs-preview-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      services:
        - name: raconteurs-service
          port: 80
